--- a/proyecto-Clopix/public/css/index.css
+++ b/proyecto-Clopix/public/css/index.css
@@ -23,18 +23,18 @@
   }
   
   img {
-    width: 120px;
-    height: 120px;
+    width: 10%;
+    height: 10%;
     float: left;
-    padding: 8px;
+    padding: 0px;
   
   }
   
   nav {
-    float: right;
-    margin-right: 200px;
+    float: left;
+    right: 0%;
   }
-  
+
   nav ul li {
     list-style: none;
     margin-left: 75px;
@@ -70,9 +70,31 @@
     position: absolute;
     right: 15px;
     justify-content: space-between;
-    align-items: center;
     margin-top: 15px;
     
 }
  
- 
+.pie {
+  display: flex;
+  
+}
+
+@media (max-width:420px) {
+  .fas-fa{
+    /*propiedad*/
+  }
+  .pie {
+    /*propiedad*/
+  }
+  .menu{
+    /*propiedad*/
+  }
+}
+
+@media (min-width: 361px) {
+  
+}
+
+@media (min-width:7668px) {
+  
+}
