--- a/proyecto-Clopix/views/index.html
+++ b/proyecto-Clopix/views/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
 
-    <img src="/images/palm.png" alt="Logoclopix">
-
+  
+    
+ 
     
   <header>
+ 
+    <div class="">
+    <img src="/images/logo.png.png" alt="Logoclopix">
+ </div>
+    
     <div class="menu">
-
-        <!--img--
-      <img src="" alt=""> 
-        -->
       
 
       <nav>
@@ -42,6 +44,24 @@
 
    
   </header>
+
+<footer>
+
+  <div class="pie">
+  <ul>
+    <li><a href="#">Información <i class=""></i></li></a></li>
+    <li><a href="#">Talles <i class=""></i></a></li>
+    <li><a href="#">Devoluciones <i class=""></i></a></li>
+    <li><a href="#">Contacto <i class=""></i></a></li>
+    <li><a href="#">+Sumate <i class=""></i></a></li>
+    <li><a href="#">Ofertas <i class=""></i></a></li>
+</ul>
+
+</div>
+
+<p>© </p>
+
+</footer>
 
 </body>
 </html>
