--- a/proyecto-Clopix/views/productCart.html
+++ b/proyecto-Clopix/views/productCart.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width-device-width">
 
         <link rel="stylesheet" href="css/CarritoStyle.css">
 
     </head>
     <body>
+        <header>
+            <div class="menu"> 
+                
+              
+              <nav>
+                 
+                  <ul>
+                    <li><img src="/images/logoCloplix.jpeg" alt="Logo Cloplix"> </li>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Catálogos</a></li>
+                    <li><a href="#">Nosotr@s</a></li>
+                  </ul>
+               
+               
+              </nav>
+              
+            </div>
+            <div class="fas-fa">
+            <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
+            <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
+            <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
+        </div>
+
+        </header>
         <table id="ListaCompras">
-            <tr >
-                <th id="Producto">Producto</th>
-                <th id="Precio Unitario">Precio Unitario</th>
-                <th id="Cantidad">Cantidad</th>
-                <th id="Precio Total">Precio Total</th>
+            <tr>
+                <th id="Producto" class="encabezado">Producto</th>
+                <th id="PrecioUnitario" class="encabezado">Precio Unitario</th>
+                <th id="Cantidad" class="encabezado">Cantidad</th>
+                <th id="PrecioTotal"class="encabezado">Precio Total</th>
+                <th></th>
             </tr>
-            <tr class="producto">
-                <td class="detalleProducto">
+            <tr >
+                <td class="dproducto">
                     <img src='/images/productoEjemplo1.png' alt="Imagen de Producto" class="img"> 
                 </td>
 
-                <td class="precioProducto"> 
+                <td class="dproducto"> 
                     <label>1000$</label>
                 </td>
 
-                <td class="cantidadProducto">
+                <td class="dproducto">
                     <button type="button">+</button>
                     <label for="">1</label>
                     <button type="button">-</button>
                 </td>
 
-                <td class="totalProducto"> 
+                <td class="dproducto"> 
                     <label>1000$</label>
                 </td>
 
@@ -39,37 +62,52 @@
                     <button type="delete">X</button>
                 </td>
             </tr>
-            <tr class="producto">
-                <td class="detalleProducto">
+            <tr>
+                <td class="dproducto">
                     <img src="/images/productoEjemplo2.png" alt="Imagen de producto2" id="ImagenProducto"> 
                 </td>
-                <td class="precioProducto">
+                <td class="dproducto">
                     <label>50$</label>
                 </td>
-                <td class="cantidadProducto">
+                <td class="dproducto">
                     <button type="button">+</button>
+                    
                     <label for="">1</label>
+                
                     <button type="button">-</button>
                 </td>
-                <td class="totalProducto"> 
+                <td class="dproducto"> 
                     <label>1000$</label>
                 </td>
                 <td class="quitarProducto">
                     <button type="delete" >X</button>
                 </td>
             </tr>
+            <tr class="resultados">
+                <td style="border: none;"></td>
+                <td></td>
+                <td class="resultados">
+                    <label >Total Neto: </label>
+                </td>
+                <td class="resultados"> 
+                    <label for="obtenerTotal"> 1050$</label>
+                </td>
+                <td></td>
+            </tr>
 
 
         </table>
-        <section> 
-            <Label>Total 1050$</Label>
-        </section>
-        <section> 
+        <section class="op"> 
             <button type="submit">Realizar Pedido</button>
+            <br>
             <button type="submit">Seguir Comprando</button>
         </section>
         <footer>
-            
+            <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
+            <br>
+            <a> <img src="/images/instagram.png" alt="Nuestro Instagram"></a>
+            <a> <img src="/images/facebook.png" alt="Nuestro facebook"></a>
+
         </footer>
 
     </body>
