--- a/proyecto-Clopix/views/index.html
+++ b/proyecto-Clopix/views/index.html
@@ -45,23 +45,49 @@
    
   </header>
 
+
+  
 <footer>
 
-  <div class="pie">
+  <div class="contenedor-footer"> <!--contenedor-->
+
+
+    <img class="img-footer" src="/images/logo.png.png" alt="Logoclopix">
+
+
+    <div class="pie"><!--pie-->
+
   <ul>
+
+    <div class="pie1">
     <li><a href="#">Información <i class=""></i></li></a></li>
     <li><a href="#">Talles <i class=""></i></a></li>
     <li><a href="#">Devoluciones <i class=""></i></a></li>
+
+  </div>
+
+    <div class="pie2"><!--pie2-->
+
     <li><a href="#">Contacto <i class=""></i></a></li>
     <li><a href="#">+Sumate <i class=""></i></a></li>
     <li><a href="#">Ofertas <i class=""></i></a></li>
 </ul>
 
-</div>
+</div><!--pie2-->
+
+<div class="copy"><!--copy-->
 
 <p>© </p>
 
+</div> <!--copy-->
+
+</div> <!--pie-->
+
+
+</div> <!--contenedor-->
 </footer>
+
+
 
 </body>
 </html>
