--- a/proyecto-Clopix/views/productCart.html
+++ b/proyecto-Clopix/views/productCart.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width-device-width">
 
         <link rel="stylesheet" href="css/CarritoStyle.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 
     </head>
     <body>
@@ -18,17 +19,17 @@
                     <li><a href="#">Tienda</a></li>
                     <li><a href="#">Catálogos</a></li>
                     <li><a href="#">Nosotr@s</a></li>
+                    <li>
+                        <div class="fas-fa">
+                            <i class="fas-fa-home"></i> 
+                            <i class="fas-fa-tag"></i> 
+                        </div>
+                    </li>
                   </ul>
-               
-               
               </nav>
               
             </div>
-            <div class="fas-fa">
-            <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-            <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
-            <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-        </div>
+            
 
         </header>
         <table id="ListaCompras">
@@ -102,11 +103,18 @@
             <br>
             <button type="submit">Seguir Comprando</button>
         </section>
-        <footer>
-            <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
-            <br>
-            <a> <img src="/images/instagram.png" alt="Nuestro Instagram"></a>
-            <a> <img src="/images/facebook.png" alt="Nuestro facebook"></a>
+        <footer id="footer">
+            <section class="infoContacto">
+                <ul class="etiquetasPie">
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Catálogos</a></li>
+                    <li><a href="#">Nosotr@s</a></li>
+                </ul>     
+                <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
+                <br>
+                <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
+                <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
+            </section>
 
         </footer>
 
