--- a/proyecto-Clopix/public/css/CarritoStyle.css
+++ b/proyecto-Clopix/public/css/CarritoStyle.css
@@ -63,7 +63,7 @@ img{
     text-align: right;
 }
 header{
-    background-color: none;
+    background-color: white;
 }
 header nav ul li a{
     width: 15%;
