--- a/proyecto-Clopix/views/index.html
+++ b/proyecto-Clopix/views/index.html
@@ -1,94 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Clopix</title>
-  <link rel="stylesheet" href="/css/index.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+<html>
+    <head>
+        <meta name="viewport" content="width-device-width">
+
+        <link rel="stylesheet" href="css/CarritoStyle.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
-</head>
-<body>
 
-  
-    
- 
-    
-  <header>
- 
-    <div class="">
-    <img src="/images/logo.png.png" alt="Logoclopix">
- </div>
-    
-    <div class="menu">
-      
+    </head>
+    <body>
+        <header>
+            <div class="menu"> 
+                
+              
+              <nav>
+                 
+                  <ul>
+                    <li><img src="/images/logoCloplix.jpeg" alt="Logo Cloplix"> </li>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Catálogos</a></li>
+                    <li><a href="#">Nosotr@s</a></li>
+                    <li style="justify-content: space-evenly;"> 
+                        <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
+                        <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
+                    </li>
+                  </ul>
+              </nav>
+              
+            </div>
+            
 
-      <nav>
-         
-          <ul>
-            <li><a href="#">Tienda</a></li>
-            <li><a href="#">Catálogos</a></li>
-            <li><a href="#">Nosotr@s</a></li>
-          </ul>
-       
-       
-      </nav>
-      
-    </div>
-    <div class="fas-fa">
-    <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
-    <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
-    <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
-</div>
+        </header>
+        <section>
+          <!-- contenido-->
+        </section>
+        <footer id="footer">
+            <section class="infoContacto">
+                <ul class="etiquetasPie">
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Catálogos</a></li>
+                    <li><a href="#">Nosotr@s</a></li>
+                </ul>     
+                <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
+                <br>
+                <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
+                <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
+            </section>
 
-   
-  </header>
+        </footer>
 
-
-  
-<footer>
-
-  <div class="contenedor-footer"> <!--contenedor-->
-
-
-    <img class="img-footer" src="/images/logo.png.png" alt="Logoclopix">
-
-
-    <div class="pie"><!--pie-->
-
-  <ul>
-
-    <div class="pie1">
-    <li><a href="#">Información <i class=""></i></li></a></li>
-    <li><a href="#">Talles <i class=""></i></a></li>
-    <li><a href="#">Devoluciones <i class=""></i></a></li>
-
-  </div>
-
-    <div class="pie2"><!--pie2-->
-
-    <li><a href="#">Contacto <i class=""></i></a></li>
-    <li><a href="#">+Sumate <i class=""></i></a></li>
-    <li><a href="#">Ofertas <i class=""></i></a></li>
-</ul>
-
-</div><!--pie2-->
-
-<div class="copy"><!--copy-->
-
-<p>© </p>
-
-</div> <!--copy-->
-
-</div> <!--pie-->
-
-
-</div> <!--contenedor-->
-</footer>
-
-
-
-</body>
+    </body>
 </html>
-
