--- a/proyecto-Clopix/views/productCart.html
+++ b/proyecto-Clopix/views/productCart.html
@@ -4,7 +4,8 @@
         <meta name="viewport" content="width-device-width">
 
         <link rel="stylesheet" href="css/CarritoStyle.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    rel="stylesheet">
 
     </head>
     <body>
@@ -19,11 +20,9 @@
                     <li><a href="#">Tienda</a></li>
                     <li><a href="#">Catálogos</a></li>
                     <li><a href="#">Nosotr@s</a></li>
-                    <li>
-                        <div class="fas-fa">
-                            <i class="fas-fa-home"></i> 
-                            <i class="fas-fa-tag"></i> 
-                        </div>
+                    <li style="justify-content: space-evenly;"> 
+                        <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
+                        <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
                     </li>
                   </ul>
               </nav>
