--- a/proyecto-Clopix/public/css/index.css
+++ b/proyecto-Clopix/public/css/index.css
@@ -4,7 +4,7 @@
 }
 body{
   width: 100%;
-  background-image: url("https://cutewallpaper.org/21/vaporwave-pixel-art-wallpaper/19-Pixel-Art-Wallpapers-that-Will-Make-Your-Desktop-Retro.png"); 
+  background-color: black;
   padding: 40px;
   margin: auto;
 }
@@ -18,6 +18,7 @@ img{
 
 header{
   background-color: white;
+  border: 5px solid wheat;
 }
 header nav ul li a{
   width: 15%;
@@ -111,3 +112,135 @@ img.redesSociales{
   }
 
 }
+
+/*CSS del slider*/
+
+ul, li {
+  padding: 0;
+  margin: 0;
+  list-style: none inside;
+}
+ul.slider {
+  position:relative; /*Necesitamos que el ul sea relativo*/
+}
+ul.slider li {
+  opacity: 0; /*Ocultamos todos los <li>*/
+  transition: opacity .5s;
+  position: absolute; /*Posicionamos en absoluto los <li>*/
+  left: 0px;
+  top: 0px;
+  margin:50px;
+  padding:50px;
+  border:2px solid red;
+  background:#fff;
+}
+ul.slider li:first-child {
+  opacity: 1; /*Mostramos el primer <li>*/
+}
+ul.slider li:target {
+  opacity: 1; /*Mostramos el <li> al que apunta el enlace*/
+}
+nav .menu{
+  position:relative;
+  top:200px;
+  left:50px;
+}
+body, html {
+  padding: 0;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  
+}
+
+ul, li {
+  box-sizing: border-box;
+}
+
+ul.slider {
+  padding: 30px;
+}
+
+ul.slider li {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: rgb(0, 0, 0);
+  opacity: 0; 
+  transition: opacity .5s;
+  padding-top: 50%;
+  text-align: center;
+}
+
+#slide1 {
+  
+}
+
+#slide2 {
+
+}
+
+#slide3 {
+
+}
+
+
+/*aca se modifican los botones de diapositiva*/
+nav .menu{ 
+  width: 100%;
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 1px;
+  left: 0;
+  background: #f1f2f3;
+  /**/
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+nav ul li {
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+
+nav a{
+  font-size: calc( 1.2rem + 1vw );
+  text-decoration: none;
+  font-weight: bold;
+  color: #00324b;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.8;
+  flex-grow: 1;
+  text-align: center;
+  border-top: 5px solid #00324b;
+  border-right: 1px solid #00324b;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+nav li:last-child a {
+  border-right: 0;
+}
+
+nav a:hover {
+  background-color: #00324b;
+  color: #fff;
+  border-top-color: #65bce8;
+}
+
+nav a:active {
+  border-top-color: #f90;
+  background: #f90;
+  color: #00324b;
+}
+
+
+/*fin CSS del slider*/
