--- a/proyecto-Clopix/views/index.html
+++ b/proyecto-Clopix/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width-device-width">
 
-        <link rel="stylesheet" href="css/CarritoStyle.css">
+        <link rel="stylesheet" href="css/index.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     rel="stylesheet">
 
@@ -16,14 +16,14 @@
               <nav>
                  
                   <ul>
-                    <li><img src="/images/logoCloplix.jpeg" alt="Logo Cloplix"> </li>
+                    <li><img src="/images/logo.png.png" alt="Logo Cloplix"> </li>
                     <li><a href="#">Tienda</a></li>
                     <li><a href="#">Catálogos</a></li>
                     <li><a href="#">Nosotr@s</a></li>
                     <li style="justify-content: space-evenly;"> 
-                        <a href="#"><i class="fas fa-home" style="color: black;"></i></a>
-                        <a href="#"><i class="fas fa-tag" style="color: black;"></i></a>
-                    </li>
+                        <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
+                        <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
+                        <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
                   </ul>
               </nav>
               
@@ -31,9 +31,25 @@
             
 
         </header>
-        <section>
-          <!-- contenido-->
-        </section>
+        <section><!-- prueba del slider-->
+
+            <ul class="slider">
+                <li id="slide1"><img src="/images/slide1.jpeg" alt=""></li>
+                <li id="slide2"><img src="/images/slide2.jpeg" alt=""></li>
+                <li id="slide3"><img src="/images/slide3.jpeg" alt=""></li>
+             </ul>
+           
+
+             <nav>
+                <ul class="menu">
+                    <li><a href="#slide1">Diapositiva 1</a></li>
+                    <li><a href="#slide2">Diapositiva 2</a></li>
+                    <li><a href="#slide3">Diapositiva 3</a></li>
+            </ul>
+            </nav>
+        
+  
+        </section><!-- fin prueba del slider-->
         <footer id="footer">
             <section class="infoContacto">
                 <ul class="etiquetasPie">
