--- a/proyecto-Clopix/views/index.html
+++ b/proyecto-Clopix/views/index.html
@@ -41,15 +41,167 @@
            
 
              <nav>
-                <ul class="menu">
-                    <li><a href="#slide1">Diapositiva 1</a></li>
-                    <li><a href="#slide2">Diapositiva 2</a></li>
-                    <li><a href="#slide3">Diapositiva 3</a></li>
+                <ul class="slide-num">
+                    <li><a href="#slide1">1</a></li>
+                    <li><a href="#slide2">2</a></li>
+                    <li><a href="#slide3">3</a></li>
             </ul>
             </nav>
         
   
         </section><!-- fin prueba del slider-->
+
+
+                   <!--PRINCIPIO DEL MAIN-->
+                   <main>
+                    <br><br>
+                    <h3>Basado en tu ultima visita</h3>
+                    <br>
+                    <section>
+                        
+             
+                        <article>
+                            <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
+            
+                            <div class="">
+            
+                                <i class="fas fa-truck"></i>
+            
+            
+                                <div class="precio-descuento">
+            
+                            <p class="precio">$6.770</p>
+            
+                            <p class="descuento">40% off</p>
+            
+            
+                                    </div>
+            
+                            <h4></h4>
+                        </div>
+            
+                            </article>
+                        
+            
+                        </article>
+            
+            
+                        <article>
+                            <img src="/images/7F_180x.png" alt="" width="360">
+            
+                            <div class="caja-detalle">
+            
+                                
+                                <i class="fas fa-truck"></i>
+            
+            
+                                <div class="precio-descuento">
+            
+                            <p class="precio">$230.000</p>
+            
+                            <p class="descuento">20% off</p>
+            
+                            </div>
+            
+                            <h4></h4>
+            
+                            </div>
+                        </article>
+            
+            
+                        <article>
+                            <img src="/images/NewChallengerall_over_print_hoodieFRONT_180x.png" alt="" width="360">
+                            
+                            <div class="caja-detalle">
+                                <i class="fas fa-truck"></i>
+            
+                                <div class="">
+                            <p class=""></p>
+            
+                            <p class=""></p>
+            
+                            </div>
+            
+                            <h4></h4>
+            
+                            </div>
+                        </article>
+            
+            
+                        <article>
+                            <img src="" alt="" width="">
+            
+                            <div class="">
+                                <i class=""></i>
+            
+            
+                                <div class="">
+                            <p class=""></p>
+            
+                            <p class=""></p>
+                                </div>
+                            <h4></h4>
+            
+                            </div>
+            
+            
+                        </article>
+            
+                        
+                    </section>
+                    
+            
+                    <br>
+                    <h3></h3>  
+                    <br>
+                    <section>
+                          
+                       
+                        <article>
+                            <img src="" alt="" width="">
+            
+                            <div class="">
+                                <i class=""></i>
+            
+                                <div class="">
+                            <p class=""></p>
+            
+                            <p class=""></p>
+            
+                            </div>
+            
+                            <h4></h4>
+            
+                            </div>
+                        </article>
+            
+            
+            
+                        <article>
+                            <img src="" alt="" width="">
+            
+                            <div class="">
+                                <i class=""></i>
+            
+                                <div class="">
+                                    
+                            <p class=""></p>
+            
+                            <p class=""></p>
+            
+                            </div>
+            
+                            <h4></h4>
+            
+                            </div>
+                        </article>
+            
+            
+        
+                </main>
+    
+                <!--FIN DEL MAIN-->
+
         <footer id="footer">
             <section class="infoContacto">
                 <ul class="etiquetasPie">
