--- a/proyecto-Clopix/views/register.html
+++ b/proyecto-Clopix/views/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href = "https: //fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap "rel =" stylesheet ">
 
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/Register.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 rel="stylesheet" />
@@ -15,73 +15,113 @@ rel="stylesheet" />
 
 <body>
 
-  
+  <header>
+    <div class="menu"> 
+        
+      
+      <nav>
+         
+          <ul>
+            <li><img src="/images/logo.png.png" alt="Logo Cloplix"> </li>
+            <li><a href="#">Tienda</a></li>
+            <li><a href="#">Catálogos</a></li>
+            <li><a href="#">Nosotr@s</a></li>
+            <li style="justify-content: space-evenly;"> 
+                <a href="/productCart"><i style="color: black;" class="fas fa-shopping-cart"></i></a>
+                <a href="/register"><i style="color: black;" class="fas fa-sign-in-alt"></i></a>
+                <a href="/login"><i style="color: black;" class="far fa-user"></i></a>
+          </ul>
+      </nav>
+      
+    </div>
+    
+
+</header>
 
 <div class="wrapper">
-    <div class="title">
-      Formulario de Registro 
-    </div>
-    
-    <div class="form">
-       <div class="inputfield">
-          <label>Nombre completo</label>
-          <input type="text" class="input">
-       </div>  
-      
+  <div class="title">
+    Formulario de Registro 
+  </div>
+  
+  <div class="form">
      <div class="inputfield">
-      <label>E-mail</label>
-      <input type="text" class="input">
-   </div>  
+        <label>Nombre completo</label>
+        <input type="text" class="input">
+     </div>  
+    
    <div class="inputfield">
-    <label>Celular</label>
+    <label>E-mail</label>
     <input type="text" class="input">
  </div>  
+ <div class="inputfield">
+  <label>Celular</label>
+  <input type="text" class="input">
+</div>  
 
- <!--Datos de ingreso-->
+<!--Datos de ingreso-->
 
 
 
-        <div class="inputfield">
-          <label>Nombre de usuario</label>
-          <input type="text" class="input">
-       </div>  
-       <div class="inputfield">
-          <label>Contraseña</label>
-          <input type="password" class="input">
-       </div>  
       <div class="inputfield">
-          <label>Confirmar contraseña</label>
-          <input type="password" class="input">
-       </div> 
+        <label>Nombre de usuario</label>
+        <input type="text" class="input">
+     </div>  
+     <div class="inputfield">
+        <label>Contraseña</label>
+        <input type="password" class="input">
+     </div>  
+    <div class="inputfield">
+        <label>Confirmar contraseña</label>
+        <input type="password" class="input">
+     </div> 
 
-     
-    
-
-    
-     
-      <div class="inputfield terms">
-          <label class="check">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-          </label>
-          <p>Acepto términos y condiciones</p>
-       </div> 
-      <div class="inputfield">
-        
-        <a href="">
-          <input type="submit" value="Crear cuenta" class="btn"  >
-        </a>
-        
-      </div>
-      
-    <!--class container-signin-->
+   
   
-    <div class="container-signin">
-      <p>¿Ya tienes una cuenta?<a href="#">Iniciar sesión</a>.</p>
-    </div>
+
+  
+   
+    <div class="inputfield terms">
+        <label class="check">
+          <input type="checkbox">
+          <span class="checkmark"></span>
+        </label>
+        <p>Acepto términos y condiciones</p>
+     </div> 
+    <div class="inputfield">
+      
+      <a href="">
+        <input type="submit" value="Crear cuenta" class="btn"  >
+      </a>
       
     </div>
-</div>	
+    
+  <!--class container-signin-->
+
+  <div class="container-signin">
+    <p>¿Ya tienes una cuenta?<a href="#">Iniciar sesión</a>.</p>
+  </div>
+    
+  </div>
+</div>
+
+
+<footer id="footer">
+    <section class="infoContacto">
+        <ul class="etiquetasPie">
+            <li><a href="#">Tienda</a></li>
+            <li><a href="#">Catálogos</a></li>
+            <li><a href="#">Nosotr@s</a></li>
+        </ul>     
+        <label for="Info">Siguenos en nuestras redes Sociales,<br> para no perderte ninguna novedad con respecto a nuestros productos</label>
+        <br>
+        <a> <img src="/images/instagram.png" alt="Nuestro Instagram" class="redesSociales"></a>
+        <a> <img src="/images/facebook.png" alt="Nuestro facebook" class="redesSociales"></a>
+    </section>
+
+</footer>
+  
+
+	
 
 
   </body>
