--- a/proyecto-Clopix/public/css/CatalogoStyless.css
+++ b/proyecto-Clopix/public/css/CatalogoStyless.css
@@ -8,69 +8,7 @@ body{
     padding: 40px;
     margin: auto;
 }
-/*ajustes del carrito*/
-table{
-    width: 100%;
-}
-tr{
-    width: 100%;
-    text-align: center;
-}
-thead{
-    height: 4vh;
-    font-size: medium;
-    font-family: cursive;
-}
-tbody{
-    height: 50vh;
-}
-tbody.resultados{
-    height: 5vh;
-}
-
-tr td.dproducto{
-    height: auto;
-    background-color: #99DDCC;
-    justify-content: center;
-    align-items: center;
-}
-tr td.producto img{
-    justify-content: center;
-    align-items: center;
-}
-
-button{
-
-    background-color: #99DDCC;
-    width: 100%;
-    color: #FF5DA2;
-    border: solid #FF5DA2 5px;
-    justify-content: space-around;
-}
-td button{
-    width: 40%;
-    height: 100%;
-}
-td.NoProducto{
-    border: none;
-}
-td.NoProducto button{
-    width: 100%;
-    height: 100%;
-}
-tr td{
-    width: 25%;
-    border: 1px solid white;
-}
-
-tr.resultados td{
-    border: none;
-}
-tr.resultados td.resultados{
-    border: 1px solid white;
-    background-color: #FF5DA2;
-}
-/*ajuste del carrito*/
+/*de aqui el contenido*/
 img{
     width: 100%;
     height: 100%;
