--- a/proyecto-Clopix/views/productCart.html
+++ b/proyecto-Clopix/views/productCart.html
@@ -62,7 +62,7 @@
                     </td>
     
                     <td class="NoProducto">
-                        <button type="delete">X</button>
+                        <button type="delete"><i class="far fa-trash-alt"></i></button>
                     </td>
                 </tr>
                 <tr>
@@ -83,7 +83,7 @@
                         <label>1000$</label>
                     </td>
                     <td class="NoProducto">
-                        <button type="delete" >X</button>
+                        <button type="delete" > <i class="far fa-trash-alt"></i> </button>
                     </td>
                 </tr>
             </tbody>
