--- a/proyecto-Clopix/public/css/CatalogoStyless.css
+++ b/proyecto-Clopix/public/css/CatalogoStyless.css
@@ -114,6 +114,52 @@ nav a {
     flex-wrap: wrap;
     position: relative;
 }
+/*detalle de productos*/
+section article{
+    display: flex;
+    width: 47%;
+    flex-direction: row;
+}
+section article section{/*apartado Img y Descripcion*/
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    border: 1px solid #99DDCC;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+}
+section article section div{/*contenedor de C/U*/
+    display: flex;
+    height: 10%;
+    justify-content:center;
+}
+section article section div button{/*control de cantidad unidades*/
+    background-color: #99DDCC;
+    height: 100%;
+    width: 10%;
+    border: none;
+}
+section article section div label{/*label de cantidad de unidades*/
+    border: 1px solid #99DDCC;
+    width: 25%;
+    align-items: center;
+    text-justify: auto;
+}
+section article section label select{/*desplegable del talle*/
+    background-color: #99DDCC;
+}
+section article section button{/*button de send*/
+    background-color: #99DDCC;
+    width: 100%;
+    height: 10%;
+}
+section.Productos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 @media (min-width:1280px){
 
 }
