--- a/proyecto-Clopix/views/productDetail.html
+++ b/proyecto-Clopix/views/productDetail.html
@@ -32,22 +32,227 @@
 
         </header>
         <!--contendio-->
-        <table>
-            <thead>
-                <tr></tr>
-                <tr>
-                    <th>CATALOGO</th>
-                </tr>
-                <tr></tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+        <section class="Productos">
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <!--copias-->
+            
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+            <article>
+                <section>
+                    <img src="/images/productoEjemplo1.png" alt="imagen Ejemplo">;
+                </section>
+                <section>
+                    <label for="Nombre">xxxxxxxxxxxxxxxxxxxxxxxxxx</label>
+                    <br>
+                    <label for="Precio">Precio: $$$$$$$$$</label>
+                    <br>
+                    <label for="Descripcion">Descripcion: Producto uno</label>
+                    <br>
+                    <div> Unidades:  <button><i class="far fa-plus-square"></i></button><label for="unidades">1</label><button><i class="far fa-minus-square"></i></button> </div>
+                    <br>
+                    <label for="talle"> Talles Disponibles: 
+                        <select name="Talles">
+                            <option value="1">S</option> 
+                            <option value="2">L</option> 
+                            <option value="3">XL</option>
+                            <option value="4">XXL</option>
+                            <option value="5">XXXL</option> 
+                        </select>
+                    </label>
+                    <br>
+                    <button type="submit">Añadir al Carrito </button>
+                </section>
+                
+            </article>
+        </section>
         <footer id="footer">
             <section class="infoContacto">
                 <ul class="etiquetasPie">
