--- a/proyecto-Clopix/src/views/index.html
+++ b/proyecto-Clopix/src/views/index.html
@@ -63,14 +63,14 @@
                         <article>
                             <img src="/images/KyotoPastel-BomberJacketFront_180x.png" alt="" width="360">
             
-                            <div class="">
+                            <div class="caja-detalle">
             
                                 <i class="fas fa-truck"></i>
             
             
                                 <div class="precio-descuento">
             
-                            <p class="precio">$6.770</p>
+                            <p class="precio">$455</p>
             
                             <p class="descuento">40% off</p>
             
@@ -97,7 +97,7 @@
             
                                 <div class="precio-descuento">
             
-                            <p class="precio">$230.000</p>
+                            <p class="precio">$150</p>
             
                             <p class="descuento">20% off</p>
             
@@ -115,58 +115,10 @@
                             <div class="caja-detalle">
                                 <i class="fas fa-truck"></i>
             
-                                <div class="">
-                            <p class=""></p>
+                                <div class="precio-descuento">
+                            <p class="precio">$230</p>
             
-                            <p class=""></p>
-            
-                            </div>
-            
-                            <h4></h4>
-            
-                            </div>
-                        </article>
-            
-            
-                        <article>
-                            <img src="" alt="" width="">
-            
-                            <div class="">
-                                <i class=""></i>
-            
-            
-                                <div class="">
-                            <p class=""></p>
-            
-                            <p class=""></p>
-                                </div>
-                            <h4></h4>
-            
-                            </div>
-            
-            
-                        </article>
-            
-                        
-                    </section>
-                    
-            
-                    <br>
-                    <h3></h3>  
-                    <br>
-                    <section>
-                          
-                       
-                        <article>
-                            <img src="" alt="" width="">
-            
-                            <div class="">
-                                <i class=""></i>
-            
-                                <div class="">
-                            <p class=""></p>
-            
-                            <p class=""></p>
+                            <p class="descuento">20% off</p>
             
                             </div>
             
@@ -174,28 +126,6 @@
             
                             </div>
                         </article>
-            
-            
-            
-                        <article>
-                            <img src="" alt="" width="">
-            
-                            <div class="">
-                                <i class=""></i>
-            
-                                <div class="">
-                                    
-                            <p class=""></p>
-            
-                            <p class=""></p>
-            
-                            </div>
-            
-                            <h4></h4>
-            
-                            </div>
-                        </article>
-            
             
         
                 </main>
