--- a/proyecto-Clopix/public/css/login.css
+++ b/proyecto-Clopix/public/css/login.css
@@ -77,4 +77,95 @@ body{
     background: black;
   }
 
+
+  /*HEADER*/
+
+
+  img{
+    width: 100%;
+    height: 100%;
+  }
   
+  header{
+    background-color: white;
+    border: 5px solid #f0cddc;
+  }
+
+  header nav ul li a{
+    width: 100%;
+    color: #99DDCC;
+    font-size: 15px;
+    margin: 5px;
+   
+  }
+
+  header nav ul li{
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content:space-between;
+  }
+
+  header nav ul{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .fas-fa {
+    display: flex;
+    flex-wrap: wrap; 
+    position: absolute;
+    right: 15px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+  }
+
+  section.op{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+  }
+
+  nav a{
+    font-size: calc( 1.2rem + 1vw );
+    text-decoration: none;
+    font-weight: bold;
+    color: #00324b;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.8;
+    flex-grow: 1;
+    text-align: center;
+    border-top: 5px solid #00324b;
+    border-right: 1px solid #00324b;
+    flex-wrap: wrap;
+    position: relative;
+  }
+  
+  nav li:last-child a {
+    border-right: 0;
+  }
+
+  
+  /*FIN DEL HEADER*/
+
+  @media (min-width:420px) {
+    .wrapper .form .inputfield{
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .wrapper .form .inputfield label{
+      margin-bottom: 5px;
+    }
+    .wrapper .form .inputfield.terms{
+      flex-direction: row;
+    }
+  }
+  
+  @media (min-width: 361px) {
+    
+  }
+  
+  @media (min-width:7668px) {
+    
+  }
