--- a/proyecto-Clopix/src/views/login2.html
+++ b/proyecto-Clopix/src/views/login2.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href = "https: //fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap " rel =" stylesheet ">
 
-<link rel="stylesheet" href="/css/login.css">
+<link rel="stylesheet" href="/css/login2.css">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
