--- a/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
+++ b/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-         <%- include('./partials/header')%>
+         <%- include('../partials/header')%>
         <table id="ListaCompras">
             <thead>
                 <tr>
@@ -88,6 +88,6 @@
             <br>
             <button type="submit">Seguir Comprando</button>
         </section>
-        <%- include('./partials/footer')%>
+        <%- include('../partials/footer')%>
     </body>
 </html>
