--- a/proyecto-Clopix/src/views/Products/productDetail.ejs
+++ b/proyecto-Clopix/src/views/Products/productDetail.ejs
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-        <%- include('./partials/header')%>
+        <%- include('../partials/header')%>
         <!--contendio-->
         <section class="Productos">
             <article>
@@ -232,7 +232,7 @@
                 
             </article>
         </section>
-        <%- include('./partials/footer')%>
+        <%- include('../partials/footer')%>
 
     </body>
 </html>
