--- a/proyecto-Clopix/src/views/Users/register.ejs
+++ b/proyecto-Clopix/src/views/Users/register.ejs
@@ -9,7 +9,7 @@
 
     </head>
     <body>
-      <%- include('./partials/header')%>
+      <%- include('../partials/header')%>
     
         <div class="wrapper">
             <div class="title">
@@ -76,7 +76,7 @@
               
             </div>
         </div>	
-        <%- include('./partials/footer')%>
+        <%- include('../partials/footer')%>
 
     </body>
 </html>
