--- a/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
+++ b/proyecto-Clopix/src/views/Products/CarritoCompras.ejs
@@ -21,50 +21,35 @@
                 </tr>
             </thead>
             <tbody>
-                <tr >
-                    <td class="dproducto">
-                        <img src='/images/productoEjemplo1.png' alt="Imagen de Producto" class="img"> 
-                    </td>
-    
-                    <td class="dproducto"> 
-                        <label>1000$</label>
-                    </td>
-    
-                    <td class="dproducto">
-                        <button type="button">+</button>
-                        <label for="">1</label>
-                        <button type="button">-</button>
-                    </td>
-    
-                    <td class="dproducto"> 
-                        <label>1000$</label>
-                    </td>
-    
-                    <td class="NoProducto">
-                        <button type="delete"><i class="far fa-trash-alt"></i></button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="dproducto">
-                        <img src="/images/productoEjemplo2.png" alt="Imagen de producto2" id="ImagenProducto"> 
-                    </td>
-                    <td class="dproducto">
-                        <label>50$</label>
-                    </td>
-                    <td class="dproducto">
-                        <button type="button">+</button>
-                        
-                        <label for="">1</label>
-                    
-                        <button type="button">-</button>
-                    </td>
-                    <td class="dproducto"> 
-                        <label>1000$</label>
-                    </td>
-                    <td class="NoProducto">
-                        <button type="delete" > <i class="far fa-trash-alt"></i> </button>
-                    </td>
-                </tr>
+                <!--prodcutos del carrito-->
+
+                <% for(let i=0;i<DetalleCompra.length;i++){ %> 
+               
+                    <tr >
+                        <td class="dproducto">
+                             <img src= <%= DetalleCompra[i].image %>  alt="Imagen de Producto" class="img"> 
+                        </td>
+                        <td class="dproducto"> 
+                            <label><%= DetalleCompra[i].precio %> </label>
+                        </td>
+        
+                        <td class="dproducto">
+                            <button type="button">+</button>
+                            <label for=""><%= DetalleCompra[i].unidades %> </label>
+                            <button type="button">-</button>
+                        </td>
+        
+                        <td class="dproducto"> 
+                            <label><%= (DetalleCompra[i].precio* DetalleCompra[i].unidades) %> $</label>
+                        </td>
+        
+                        <td class="NoProducto">
+                            <button type="delete"><i class="far fa-trash-alt"></i></button>
+                        </td>
+                    </tr>
+               
+                <% } %> 
+                <!-- fin del carrito-->
             </tbody>
             <tbody class="resultados">
                 <tr class="resultados">
@@ -74,7 +59,7 @@
                         <label >Total Neto: </label>
                     </td>
                     <td class="resultados"> 
-                        <label for="obtenerTotal"> 1050$</label>
+                        <label > valor </label>
                     </td>
                     <td class="NoProducto"></td>
                 </tr>
@@ -84,9 +69,9 @@
 
         </table>
         <section class="special"> 
-            <button type="submit">Realizar Pedido</button>
+            <button submit >Realizar Pedido</button>
             <br>
-            <button type="submit">Seguir Comprando</button>
+            <button onclick="location.href='/producto'" > Seguir Comprando  </button> <!--es un boton para redireccionar, para ello usa la etiqueta location y usa su propiedad href asignandole a esta la ruta-->
         </section>
         <%- include('../partials/footer')%>
     </body>
